Add styling in beer.css

--- a/app/components/beer-list/beer-list.template.html
+++ b/app/components/beer-list/beer-list.template.html
@@ -1,6 +1,6 @@
 <div class="beerList">
   <div class="searchBar">
-    <span>Enter a search term: </span>
+    <span>Search: </span>
     <input ng-model="$ctrl.query" type="text" placeholder="Enter beer or brewery"/>
   </div>
   <table class="beers">
